--- a/Routing/static/dashboard.html
+++ b/Routing/static/dashboard.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dashboard</title>
+        <title>Login Portal</title>
     </head>
     <body>
         <h1>Dashboard for Login</h1>
-        <form action="/login">
+        <form action="/Login Portal">
           <label for="email">Email:</label><br>
-          <input type="text" id="email" name="email" value="person@email.com"><br>
+          <input type="text" id="email" name="email" value="abc@xyz.com"><br>
           <label for="password">Password:</label><br/>
           <input type="password" id="password" name="password" value="password"><br><br>
           <input type="submit" value="Submit">
